# fishfood

./: CMakeLists.txt  LICENSE.md  README.md  bresenham.h  code.py  double_linear_axis.c  double_linear_axis.h  gpio_commands.c  i2c_commands.c  i2c_commands.h  linear_axis.c  linear_axis.h  machine.c  machine.h  main.c  pins.h  rotational_axis.c  rotational_axis.h  stepper.c  stepper.h  tmc.c  tmc2209_registers.h  tmc_config.c  tmc_config.h  tmc_uart.c  z_axis.c  z_axis.h
config/: general.h  motion.h  pins.h  serial.h  tmc.h
doc/: compile-debug.md
drivers/: neopixel.h  pca9495a.h  tmc2209.c  tmc2209.h  tmc2209_helper.c  tmc2209_helper.h  tmc2209_registers.h  tmc_uart.c  tmc_uart.h  xgzp6857d.c  xgzp6857d.h
littleg/: littleg.c  littleg.h
reference/: accel.py
src/: feeders.c  feeders.h  gpio_commands.c  gpio_commands.h  i2c_commands.c  i2c_commands.h  linear_axis.h  machine.c  machine.h  main.c  report.c  report.h
src/config/: motion.h  pins.h  serial.h
src/drivers/: graviton_io.c  graviton_io.h  neopixel.c  neopixel.h  neopixel.pio  pca9495a.h  rs485.c  rs485.h  tmc2209.c  tmc2209.h  tmc2209_helper.c  tmc2209_helper.h  tmc2209_registers.h  tmc_uart.c  tmc_uart.h  xgzp6857d.c  xgzp6857d.h
src/graviton/: phason.h
src/libwinter/: wntr_pack.h
src/littleg/: littleg.c  littleg.h
src/motion/: linear_axis.c  linear_axis.h  rotational_axis.c  rotational_axis.h  stepper.c  stepper.h
tests/: build.zig  cdefs.zig  motion.zig  stubs.zig  test.zig
tests/stubs/: stepper.zig
tests/stubs/hardware/: gpio.h  platform_defs.h
tests/stubs/pico/: time.h
